# syntect-py

./: .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Makefile  QUICKREF.md  Readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: CI.yml
docs/: implementation-status.md  pyo3-implementation-plan.md
pyext/: Cargo.toml  mypy.ini  pyproject.toml  syntect.prof  syntect.pyi  write_html.py
pyext/examples/: advanced_highlight.py  basic_highlight.py  benchmark.py  benchmark_analysis.md  benchmark_comparison.py  benchmark_comprehensive.py  benchmark_fastpylight.py  benchmark_large_files.py  css_generator.py  deep_profile.py  error_handling.py  highlight_file.py  highlight_html.py  incremental.py  metadata_example.py  optimization_plan.md  profile_benchmark.py
pyext/src/: convenience.rs  converters.rs  dumps.rs  errors.rs  highlighter.rs  highlighting.rs  html.rs  lib.rs  metadata.rs  parse_state.rs  style.rs  syntax_set.rs  theme_set.rs  util.rs
pyext/tests/: test_edge_cases.py  test_golden_outputs.py  test_integration.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase17.py  test_phase18.py  test_phase19.py  test_phase20.py  test_phase21.py  test_phase22.py  test_phase24.py  test_stub_conformance.py  test_syntect.py
pyext/tools_legacy/: write_html.py
