[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "syntect"
version = "5.3.0"
description = "High-quality syntax highlighting for Python using Sublime Text grammars"
readme = "../README.md"
license = "MIT"
authors = [
    { name = "syntect-py contributors", email = "contributors@syntect-py.dev" },
]
keywords = ["syntax", "highlighting", "syntect", "sublime", "text", "grammar"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=6.0",
    "flake8>=10.0",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/syntect-py/syntect-py"
Documentation = "https://github.com/syntect-py/syntect-py#readme"
Repository = "https://github.com/syntect-py/syntect-py"
Issues = "https://github.com/syntect-py/syntect-py/issues"
Changelog = "https://github.com/syntect-py/syntect-py/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module", "metadata"]

[tool.maturin.debug]
rustflags = []

[tool.maturin.release]
rustflags = ["-C", "opt-level=3", "-C", "lto=thin"]
